# pyquiz

./: .gitignore  TODO.md  pyproject.toml
src/pyquiz/: main.py
src/pyquiz/app/: app.py
src/pyquiz/app/static/: styles.css
src/pyquiz/app/templates/: end.html  index.html
src/pyquiz/data/: setup_db.py
src/pyquiz/game/: mechanics.py
